[gd_scene load_steps=7 format=3 uid="uid://dmc8wtyn4dlf5"]

[ext_resource type="Script" path="res://DestoryArea.gd" id="1_fm518"]
[ext_resource type="FontFile" uid="uid://hmkar6t25yux" path="res://adds/fonts/DinkieBitmap-9pxDemo.ttf" id="1_ojf0v"]
[ext_resource type="PackedScene" path="res://card.tscn" id="1_u6pdl"]
[ext_resource type="PackedScene" uid="uid://dkmn8rf03qc0q" path="res://scene/dialog_scene_bg.tscn" id="5_bjg8g"]
[ext_resource type="AudioStream" uid="uid://dy5167pddk2r" path="res://audios/drum_rythm1.mp3" id="5_to6su"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vectm"]
size = Vector2(915.256, 46.5517)

[node name="CardShow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" parent="." instance=ExtResource("5_bjg8g")]
modulate = Color(0.372549, 0.372549, 0.372549, 1)
self_modulate = Color(1, 1, 1, 0.596078)

[node name="Genshin_impact" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DestoryArea" type="MarginContainer" parent="Genshin_impact"]
layout_mode = 0
offset_left = 29.0
offset_top = 581.0
offset_right = 994.0
offset_bottom = 646.0
scale = Vector2(1.09556, 1.16)
script = ExtResource("1_fm518")

[node name="Panel" type="Panel" parent="Genshin_impact/DestoryArea"]
layout_mode = 2

[node name="Area2D" type="Area2D" parent="Genshin_impact/DestoryArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Genshin_impact/DestoryArea/Area2D"]
position = Vector2(477.97, 32.7586)
shape = SubResource("RectangleShape2D_vectm")

[node name="Label" type="Label" parent="Genshin_impact/DestoryArea"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ojf0v")
theme_override_font_sizes/font_size = 30
text = "拖入圣器"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Card1" parent="Genshin_impact" instance=ExtResource("1_u6pdl")]
layout_mode = 1
anchor_left = 0.04
anchor_top = 0.029
anchor_right = 0.184
anchor_bottom = 0.431
offset_left = 85.4
offset_top = 87.84
offset_right = 197.512
offset_bottom = 257.344

[node name="Card2" parent="Genshin_impact" instance=ExtResource("1_u6pdl")]
layout_mode = 1
anchor_left = 0.349
anchor_top = 0.029
anchor_right = 0.5
anchor_bottom = 0.426
offset_left = 429.04
offset_top = 87.84
offset_right = 532.088
offset_bottom = 258.584

[node name="Card3" parent="Genshin_impact" instance=ExtResource("1_u6pdl")]
layout_mode = 1
anchor_left = 0.674
anchor_top = 0.029
anchor_right = 0.818
anchor_bottom = 0.432
offset_left = 791.04
offset_top = 87.84
offset_right = 902.152
offset_bottom = 257.696

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_to6su")
autoplay = true

[connection signal="area_entered" from="Genshin_impact/DestoryArea/Area2D" to="Genshin_impact/DestoryArea" method="_on_area_2d_area_entered"]
[connection signal="mouse_press" from="Genshin_impact/Card1" to="Genshin_impact/DestoryArea" method="_on_card_mouse_press"]
[connection signal="mouse_release" from="Genshin_impact/Card1" to="Genshin_impact/DestoryArea" method="_on_card_mouse_release"]
[connection signal="mouse_press" from="Genshin_impact/Card2" to="Genshin_impact/DestoryArea" method="_on_card_mouse_press"]
[connection signal="mouse_release" from="Genshin_impact/Card2" to="Genshin_impact/DestoryArea" method="_on_card_mouse_release"]
[connection signal="mouse_press" from="Genshin_impact/Card3" to="Genshin_impact/DestoryArea" method="_on_card_mouse_press"]
[connection signal="mouse_release" from="Genshin_impact/Card3" to="Genshin_impact/DestoryArea" method="_on_card_mouse_release"]
